--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "francine"
-version = "0.1.0"
+version = "0.0.4"
 description = "A simple terminal to-do list"
 authors = ["Guilherme Fabrizio <gfabricio@gmail.com>"]
 license = "GNU"
 readme = "README.md"
 
 [tool.poetry.scripts]
-francine = "cli:cli"
+francine = "francine.cli:francine"
 
 [tool.poetry.dependencies]
 python = "^3.12"
